# velocityos

./: CMakeLists.txt  README.md
core/: kernel.cpp  task.cpp
examples/: blinky_task.cpp
ipc/: semaphore.hpp
sched/: scheduler.cpp
